--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,29 +2,117 @@
  * Styling for the About component:
  */
 
-.about-contents {
-  display: flex;
-  margin-left: 15%;
-  width: 100%;
-  height: 25%;
-}
-.bullet-points-container {
-  flex: 1;
-  margin-left: 200%;
-}
-.img-headshot {
-  width: 250px;
-  border-radius: 2px;
-  flex: 2;
-  margin-left: 400%;
-}
-.about-header {
+ .about-header {
   font-family: Kanit;
   font-weight: 300;
-  font-size: 150%;
+  font-size: 115%;
   color: #7b7b87;
   display:  block;
-  margin-left: 30%;
+  margin-left: 10%;
+  width: 80%;
   text-align: left;
-  padding: 2%;
+  margin-bottom: 5%;
+  margin-top: 2%;
+} 
+ 
+ .about-contents {
+  width: 100%;
 }
+
+.img-headshot {
+  width: 50%;
+  margin-left: 25%;
+  display: flex;
+  border-radius: 15px;
+}
+
+.bullet-point-container {
+  margin-top: 2%;
+  position: relative;
+  width: 95%;
+  margin-left: 5%;
+  height: auto;
+  font-size: small;
+}
+
+
+@media screen and (min-width: 760px) {
+
+  .about-container {
+    display: flex;
+    align-items: center;
+    width: 90%;
+  }
+
+  .about-header {
+    font-family: Kanit;
+    font-weight: 300;
+    font-size: calc(.5rem + 1.5vw);
+    color: #7b7b87;
+    display:  block;
+    margin-left: 10.5%;
+    text-align: left;
+    margin-bottom: 5%;
+    margin-top: 2%;
+  } 
+
+  
+  .img-container {
+    width: 30%;
+    margin-left: 7%;
+  }
+  
+  .img-headshot {
+    width: 30%;
+    width: 15rem;
+    border-radius: 15px;
+  }
+  
+  .about-contents {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bullet-point-container {
+    position: relative;
+    left: 5rem;
+    top: 0rem;
+    width: 90%;
+  }
+}
+
+
+/* Old CSS */
+
+/* .about-contents {
+  display: flex;
+  margin-left: 10%;
+  width: 85%;
+  height: 25%;
+  position: relative;
+}
+
+.bullet-points-container {
+  flex: 2;
+  width: 80%;
+  text-align: left;
+  display: flex;
+}
+
+.img-headshot {
+  width: 80%;
+  flex: 1;
+  top: 8rem;
+  position: relative;
+}
+
+.img-headshot img{
+  width: 100%;
+  border-radius: 3px;
+  position: relative;
+  flex: 2;
+} 
+*/
+
