--- a/src/components/About.css
+++ b/src/components/About.css
@@ -75,12 +75,12 @@
     align-items: center;
   }
 
-  .bullet-point-container {
+  /* .bullet-point-container {
     position: relative;
     left: 5rem;
     top: 0rem;
     width: 90%;
-  }
+  } */
 }
 
 
