--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,8 +1,9 @@
 // THEME COLORS COLORS
 
 $primaryColor: #242337;
-$secondaryColor: #f6f6f7;
-$tertiaryColor:  #dff2fc;
+// $secondaryColor: #f6f6f7;
+$tertiaryColor:  #f6f6f7;
+$secondaryColor: #656573;
 
 // TEXT COLORS
 
