--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,15 +1,14 @@
-// THEME COLORS COLORS
+/* THEME COLORS */
 
 $primaryColor: #242337;
-// $secondaryColor: #f6f6f7;
 $tertiaryColor:  #f6f6f7;
 $secondaryColor: #656573;
 
-// TEXT COLORS
+/* TEXT COLORS */
 
 $primaryText: #e9e9eb;
 
-// BOOTSTRAP OVERRIDE
+/* BOOTSTRAP OVERRIDE */
 
 $theme-colors: (
   "primary": #242337
