--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -3,6 +3,9 @@
 @import "~bootstrap/scss/mixins/_breakpoints.scss";
 @import '_colors.scss';
 
+
+/* THROUGHOUT */
+
 headerFont {
   font-family: Kanit;
   font-weight: 300;
@@ -39,10 +42,26 @@ h2 {
   font-style: normal;
 }
 
+/* NAVIGATIONBAR */
+
+.nav-link {
+  cursor: pointer;
+}
+
+.personal-logo {
+  cursor: pointer;
+  font-family: Kanit;
+  font-weight: 400;
+  font-size: large;
+  color:  #242337;
+  vertical-align: middle;
+}
+
+/* HOME */
+
 .intro-hello {
   font-size: 30px;
   color: #656573;
-  // text-align: left;
 }
 
 .intro-name {
@@ -50,21 +69,18 @@ h2 {
   font-weight: 700;
   font-kerning: none;
   letter-spacing: -.5px;
-  line-height: 80px;
+  line-height: 100px;
   margin: 1rem 0;
   margin-left: -4px;
-  // text-align: left;
 }
 
 .intro-tagline {
   font-size: 40px;
   color: #656573;
-  // text-align: left;
 }
 
 /* PORTFOLIO */
 
-// technologies listed on each project
 .projectTechStack {
   @extend headerFont;
   color: $secondaryColor;
@@ -74,17 +90,8 @@ h2 {
   }
 }
 
-// technology list separator
 .projectTechStackSep {
   @extend .projectTechStack;
   color: $tertiaryColor;
   margin: 0 4px;
 }
-
-// 'featured project' line
-// .projectFeatured {
-//   @extend codeFont;
-//   color: $primaryColor;
-//   font-size: .85rem;
-//   margin-bottom: .5rem;
-// }
